[package]
name = "fera"
version = "0.1.0"
authors = ["malbarbo"]
description = """
An aggregation of algorithms, data structures and supporting crates.
"""
categories = ["algorithms", "data-structures"]
repository = "https://github.com/malbarbo/fera"
readme = "README.md"
license = "MPL-2.0"

[workspace]
members = [
    "array",
    "ext",
    "fun",
    "graph",
    "optional",
#    "tree",
    "unionfind",
]

[dependencies]
fera-array = { version = "0.1", path = "array", optional = true }
fera-ext = { version = "0.2", path = "ext", optional = true }
fera-fun = { version = "0.1", path = "fun", optional = true }
fera-graph = { version = "0.2", path = "graph", optional = true }
fera-optional = { version = "0.1", path = "optional", optional = true }
# fera-tree = { version = "0.1", path = "tree/", optional = true }
fera-unionfind = { version = "0.1", path = "unionfind", optional = true }

[dev-dependencies]
version-sync = "0.5"

[features]
array = ["fera-array"]
ext = ["fera-ext"]
fun = ["fera-fun"]
graph = ["fera-graph"]
optional = ["fera-optional"]
# tree = ["fera-tree"]
unionfind = ["fera-unionfind"]

[package.metadata.docs.rs]
all-features = true
