[package]
name = "fera-graph"
version = "0.1.1"
authors = ["malbarbo"]
description = """
Graph data structures and algorithms.
"""
repository = "https://github.com/malbarbo/fera/tree/master/graph"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
num-traits = "0.1"
rand = "0.3"
fera-fun = { version = "0.1", path = "../fun" }
fera-optional = { version = "0.1", path = "../optional" }
fera-unionfind = { version = "0.1", path = "../unionfind" }
quickcheck = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
itertools = "0.7"
version-sync = "0.5"

[package.metadata.docs.rs]
all-features = true
