[package]
name = "fera-graph"
version = "0.3.0"
authors = ["malbarbo"]
description = """
Graph data structures and algorithms.
"""
repository = "https://github.com/malbarbo/fera/tree/master/graph"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
num-traits = "0.2"
rand = "0.6"
fera-ext = { version = "0.3", path = "../ext" }
fera-fun = { version = "0.1", path = "../fun" }
fera-optional = { version = "0.2", path = "../optional" }
fera-unionfind = { version = "0.1", path = "../unionfind" }
quickcheck = { version = "0.8", optional = true, default-features = false }

[dev-dependencies]
itertools = "0.8"
version-sync = "0.9"

[build-dependencies]
rustc_version = "0.2"

[features]
nightly = []

[package.metadata.docs.rs]
all-features = true
