[package]
name = "fera-graphs"
version = "0.1.0"
authors = ["Marco A L Barbosa <malbarbo@gmail.com>"]

[dependencies]
num = "0.1"
rand = "0.3"
fnv = "1.0"
fera-fun = { path = "../fun/" }
fera-optional = { path = "../optional/" }
fera-unionfind = { path = "../unionfind/" }

[dev-dependencies]
itertools = "0.5"
quickcheck = "0.4"
