[package]
name = "fera-optional"
version = "0.1.1"
authors = ["malbarbo"]
description = """
An optional value trait and some implementations.
"""
repository = "https://github.com/malbarbo/fera/master/optional"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
version-sync = "0.5"
