[package]
name = "fera-tree"
version = "0.1.0"
authors = ["malbarbo"]
description = """
Tree data structures. Including Link/cut trees and Euler tour trees.
"""
repository = "https://github.com/malbarbo/fera/tree/master/tree"
readme = "README.md"
license = "MPL-2.0"

[dependencies]
rand = "0.5"

[dev-dependencies]
quickcheck = { version = "0.7", default-features = false }
rand = "0.5"
version-sync = "0.5"
